<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.alexaat.flowershop.fragments.ListFragment"
        android:label="@string/flower_list_title"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_listFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_listFragment_to_messagesFragment"
            app:destination="@id/messagesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.alexaat.flowershop.fragments.DetailsFragment"
        android:label="@string/flower_details_title"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="id"
            app:argType="long" />
        <action
            android:id="@+id/action_detailsFragment_to_cartFragment"
            app:destination="@id/cartFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_detailsFragment_to_messagesFragment"
            app:destination="@id/messagesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.alexaat.flowershop.fragments.AboutFragment"
        android:label="@string/about_title"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/rulesFragment"
        android:name="com.alexaat.flowershop.fragments.RulesFragment"
        android:label="@string/rules_title"
        tools:layout="@layout/fragment_rules" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.alexaat.flowershop.fragments.CartFragment"
        android:label="@string/cart" >
        <action
            android:id="@+id/action_cartFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popUpTo="@id/listFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/myOrdersFragment"
        android:name="com.alexaat.flowershop.fragments.MyOrdersFragment"
        android:label="@string/my_orders_fragment_title" />
    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.alexaat.flowershop.fragments.MessagesFragment"
        android:label="@string/messages_fragment_title" >
        <action
            android:id="@+id/action_messagesFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_messagesFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right" />
    </fragment>
</navigation>