<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="flower"
            type="com.alexaat.flowershop.network.Flower" />
        <variable
            name="addToCartClickListener"
            type="com.alexaat.flowershop.fragments.AddToCartClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/fragment_details_status_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/status_image"
            app:srcCompat="@drawable/loading_spinner"/>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ListOfItemsFragment">

        <ScrollView
            android:id="@+id/new_item_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragments.DetailsFragment">

                <ImageView
                    android:id="@+id/fragment_details_flower_icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/flower_details_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:setOverviewImage="@{flower}" />

                <TextView
                    android:id="@+id/fragment_details_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_details_flower_icon" />

                <TextView
                    android:id="@+id/fragment_details_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_details_title_label"
                    app:setTitle="@{flower}"
                    tools:text="item title" />

                <TextView
                    android:id="@+id/fragment_details_description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_details_title_text" />

                <TextView
                    android:id="@+id/fragment_details_description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_details_description_label"
                    app:setDescription="@{flower}"
                    tools:text="item description" />

                <TextView
                    android:id="@+id/fragment_details_unit_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/unit_price"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_details_description_text" />

                <TextView
                    android:id="@+id/fragment_details_unit_price_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_details_unit_price_label"
                    app:setUnitPrice="@{flower}"
                    tools:text="£10.00" />

                <TextView
                    android:id="@+id/fragment_details_unit_availability_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/number_in_stock"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_details_unit_price_text" />

                <TextView
                    android:id="@+id/fragment_details_unit_availability_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_details_unit_availability_label"
                    app:setNumberInStock="@{flower}"
                    tools:text="3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_add"
            android:onClick="@{() -> addToCartClickListener.click(flower.id)}"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
</layout>