<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="flower"
            type="com.alexaat.flowershop.network.Flower"/>
        <variable
            name="onDeleteItemClickListener"
            type="com.alexaat.flowershop.adapters.OnDeleteItemClickListener"/>
    </data>
    
    
<androidx.constraintlayout.widget.ConstraintLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_marginBottom="4dp"
    android:background="@drawable/item_boarder">

    <ImageView
        android:id="@+id/cart_item_layout_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/cart_item_image"
        app:setOverviewImage="@{flower}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/progress_image" />

    <TextView
        android:id="@+id/cart_item_layout_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        tools:text="Title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:setTitle="@{flower}"
        app:layout_constraintEnd_toStartOf="@+id/cart_item_layout_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cart_item_layout_description_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:singleLine="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/cart_item_layout_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_item_layout_title_text"
        app:setDescription="@{flower}"
        tools:text="Description" />

    <TextView
        android:id="@+id/cart_item_layout_ordered_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:text="@string/ordered"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_item_layout_description_text" />

    <TextView
        android:id="@+id/cart_item_layout_ordered_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        tools:text="1"
        android:textSize="14sp"
        app:setNumberInStock="@{flower}"
        app:layout_constraintBaseline_toBaselineOf="@+id/cart_item_layout_ordered_label"
        app:layout_constraintStart_toEndOf="@+id/cart_item_layout_ordered_label" />

    <TextView
        android:id="@+id/cart_item_layout_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/subtotal"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_item_layout_ordered_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cart_item_layout_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        tools:text="£25.00"
        android:textSize="14sp"
        app:setSubtotal="@{flower}"
        app:layout_constraintBaseline_toBaselineOf="@+id/cart_item_layout_price_label"
        app:layout_constraintStart_toEndOf="@+id/cart_item_layout_price_label" />

    <ImageButton
        android:id="@+id/cart_item_layout_remove_button"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/darkCreme"
        android:contentDescription="@string/cart_item_remove_button"
        android:onClick="@{() -> onDeleteItemClickListener.onClick(flower.id)}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cart_item_layout_icon"
        app:layout_constraintStart_toStartOf="@+id/cart_item_layout_icon"
        app:layout_constraintTop_toBottomOf="@+id/cart_item_layout_icon"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_delete" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>